2008-08-28 [colin]	3.5.0cvs78

	* src/Makefile.am
	* src/account.c
	* src/compose.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/privacy.c
	* src/privacy.h
	* src/procmime.c
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/pixmaps/key_gpg_signed.xpm
		Fix bug 1412, "Sign reply, if mail was signed"
		Add an account preference to sign replies to signed mails

2008-08-28 [iwkse]	3.5.0cvs77

	* src/prefs_filtering.c
		Making the search more useful,
		jumping directly to the relative rule.

2008-08-27 [colin]	3.5.0cvs76

	* src/main.c
		Add a bit of info

2008-08-27 [colin]	3.5.0cvs75

	* src/gtk/gtkcmctree.c
		Fix a few ifdefs

2008-08-26 [colin]	3.5.0cvs74

	* src/gtk/gtkcmctree.c
		Fix missing inits on old glib

2008-08-26 [wwp]	3.5.0cvs73

	* src/common/utils.c
		Added 'Fwd' to the list of known common subject prefixes.

2008-08-25 [iwkse]	3.5.0cvs72

	* src/image_viewer.c
		Add animated gif support to the
		message preview.

2008-08-25 [colin]	3.5.0cvs71

	* src/gtk/gtkcmctree.c
		Make sure work isn't null

2008-08-24 [colin]	3.5.0cvs70

	* src/common/ssl.c
		Fix typo on SSL_CERT_DIR

2008-08-23 [holger]	3.5.0cvs69

	* src/printing.c
		Fix bug 1699 'Separator line mis-placed when
		printing some e-mails'. The number of header lines
		was not correctly calculated when Pango inserts
		linebreaks

2008-08-23 [colin]	3.5.0cvs68

	* src/mainwindow.c
		Fix the account selector button; thanks
		to wwp

2008-08-21 [colin]	3.5.0cvs67

	* src/compose.c
	* src/compose.h
		Add a compose preference for auto-indent
	* src/mainwindow.c
	* src/summaryview.c
		Make colorlabel accels a bit less hacky

2008-08-21 [colin]	3.5.0cvs66

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_wrapping.c
		Add a preference for autoindent; fix no_join tag
		being applied to whole lines instead of just \n when
		creating a line 

2008-08-21 [colin]	3.5.0cvs65

	* src/compose.c
		Add support for auto-indentation

2008-08-19 [colin]	3.5.0cvs64
