@@ -3490,3 +3490,4 @@
 ( cvs diff -u -r 1.115.2.202 -r 1.115.2.203 src/main.c;  ) > 3.5.0cvs76.patchset
 ( cvs diff -u -r 1.59.2.71 -r 1.59.2.72 src/prefs_filtering.c;  ) > 3.5.0cvs77.patchset
 ( cvs diff -u -r 1.155.2.89 -r 1.155.2.90 src/Makefile.am;  cvs diff -u -r 1.61.2.81 -r 1.61.2.82 src/account.c;  cvs diff -u -r 1.382.2.470 -r 1.382.2.471 src/compose.c;  cvs diff -u -r 1.105.2.142 -r 1.105.2.143 src/prefs_account.c;  cvs diff -u -r 1.49.2.37 -r 1.49.2.38 src/prefs_account.h;  cvs diff -u -r 1.10.2.15 -r 1.10.2.16 src/privacy.c;  cvs diff -u -r 1.10.2.16 -r 1.10.2.17 src/privacy.h;  cvs diff -u -r 1.49.2.113 -r 1.49.2.114 src/procmime.c;  cvs diff -u -r 1.25.2.59 -r 1.25.2.60 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.36 -r 1.18.2.37 src/stock_pixmap.h;  cvs diff -u -r 1.395.2.383 -r 1.395.2.384 src/summaryview.c;  diff -u /dev/null src/pixmaps/key_gpg_signed.xpm;  ) > 3.5.0cvs78.patchset
+( cvs diff -u -r 1.61.2.82 -r 1.61.2.83 src/account.c;  cvs diff -u -r 1.60.2.61 -r 1.60.2.62 src/prefs_actions.c;  cvs diff -u -r 1.59.2.72 -r 1.59.2.73 src/prefs_filtering.c;  cvs diff -u -r 1.12.2.65 -r 1.12.2.66 src/prefs_template.c;  ) > 3.5.0cvs79.patchset
